updated grid 2 section

--- a/index.html
+++ b/index.html
@@ -68,26 +68,25 @@
 <!-- Grid 1 End -->
 
 <!-- Grid 2 start -->
-    <div class="container1">
-      <div class="left-image">
+    
+    <div class="container2">
+      <div class="left-side">
         <img src="./assets/assets/desktop/image-grid-2.jpg" alt="Left Image" />
       </div>
-      <div class="right-images">
-        <div class="image-column">
-          <img
-            src="./assets/assets/desktop/image-grid-3@2x.jpg"
-            alt="Image 1"
-          />
-        </div>
-        <div class="image-column2">
-          <h2 class="grid3-h1">COME & BE INSPIRED</h2>
-          <p class="grid3-para">
-            We’re excited to welcome you to our gallery and see how our
-            collections influence you.
-          </p>
-        </div>
+      <div class="right-side">
+        <div><img
+        src="./assets/assets/desktop/image-grid-3@2x.jpg"
+        alt="Image 1"
+      /></div>
+      <div class="image-column2">
+        <h2 class="grid3-h1">COME & BE INSPIRED</h2>
+        <p class="grid3-para">
+          We’re excited to welcome you to our gallery and see how our
+          collections influence you.
+        </p>
       </div>
-    </div>
+      </div>
+  </div>
     <!-- Grid 2 Section end -->
 
     <!-- footer Start -->
